Atualização de landing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,195 +209,13 @@ th {
   text-align: left;
 }
 
-/* line 2, ../../sass/blocks/_testando-bemdr.scss */
-.row {
-  width: 1140px;
-  height: 40px;
-  margin: 0 auto;
-}
-
-/* line 8, ../../sass/blocks/_testando-bemdr.scss */
-.block {
-  justify-content: center;
-  grid-column-gap: 20px;
-  grid-row-gap: 20px;
-  display: grid;
-  grid-template-columns: repeat(4, 270px);
-}
-/* line 11, ../../sass/blocks/_testando-bemdr.scss */
-.block {
-  background: #fff;
-}
-
-/* line 19, ../../sass/blocks/_testando-bemdr.scss */
-.block__element, .block__element--first,
-.block__element--second,
-.block__element--third {
-  background: #fff;
-}
-
-@media (min-width: 910px) {
-  /* line 31, ../../sass/blocks/_testando-bemdr.scss */
-  .block__element--second {
-    grid-column-end: span 2;
-  }
-}
-
-/* line 43, ../../sass/blocks/_testando-bemdr.scss */
-.exemplo {
-  justify-content: center;
-  grid-column-gap: 20px;
-  grid-row-gap: 20px;
-  display: grid;
-  grid-template-columns: repeat(2, 470px);
-  margin-top: 30px;
-}
-
-/* line 48, ../../sass/blocks/_testando-bemdr.scss */
-.ipt-text,
-.ipt-email,
-.ipt-number,
-.ipt-pass {
-  width: 100%;
-}
-/* line 28, ../../sass/mixins/_ipts.scss */
-.ipt-text,
-.ipt-email,
-.ipt-number,
-.ipt-pass {
-  padding: 0 20px;
-  line-height: 40px;
-  height: 40px;
-  box-sizing: border-box;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-}
-/* line 42, ../../sass/mixins/_ipts.scss */
-.ipt-text:focus,
-.ipt-email:focus,
-.ipt-number:focus,
-.ipt-pass:focus {
-  outline: 3px rgba(0, 0, 0, 0.1) solid;
-}
-/* line 46, ../../sass/mixins/_ipts.scss */
-.ipt-text:disabled,
-.ipt-email:disabled,
-.ipt-number:disabled,
-.ipt-pass:disabled {
-  background-color: #efefef;
-}
-/* line 51, ../../sass/mixins/_ipts.scss */
-.ipt-text.-is-invalid,
-.ipt-email.-is-invalid,
-.ipt-number.-is-invalid,
-.ipt-pass.-is-invalid {
-  border-color: #f54f54;
-  color: #f54f54;
-}
-/* line 55, ../../sass/mixins/_ipts.scss */
-.ipt-text.-is-invalid::placeholder,
-.ipt-email.-is-invalid::placeholder,
-.ipt-number.-is-invalid::placeholder,
-.ipt-pass.-is-invalid::placeholder {
-  color: #f54f54;
-  opacity: 1;
-}
-/* line 61, ../../sass/mixins/_ipts.scss */
-.ipt-text.-is-valid,
-.ipt-email.-is-valid,
-.ipt-number.-is-valid,
-.ipt-pass.-is-valid {
-  border-color: #4caf50;
-  color: #4caf50;
-}
-/* line 65, ../../sass/mixins/_ipts.scss */
-.ipt-text.-is-valid::placeholder,
-.ipt-email.-is-valid::placeholder,
-.ipt-number.-is-valid::placeholder,
-.ipt-pass.-is-valid::placeholder {
-  color: #4caf50;
-  opacity: 1;
-}
-
-/* line 90, ../../sass/mixins/_ipts.scss */
-.ipt-btn {
-  position: relative;
-  vertical-align: middle;
-  display: inline-block;
-  height: 40px;
-  box-sizing: border-box;
-  padding: 0 20px;
-  line-height: 38px;
-  color: #e0e0e0;
-  background: #673ab7;
-  text-decoration: none;
-  border: 0;
-  border-radius: 3px;
-}
-/* line 112, ../../sass/mixins/_ipts.scss */
-.ipt-btn:disabled {
-  background-color: #efefef;
-  color: #bfbfbf;
-}
-
-/* line 60, ../../sass/blocks/_testando-bemdr.scss */
-.ipt-label {
+/* line 9, ../../sass/blocks/_land.scss */
+.canvas {
   display: block;
-  margin-bottom: 10px;
-}
-
-/* line 77, ../../sass/mixins/_ipts.scss */
-.ipt-group::after {
-  margin: 5px 0;
-  height: 12px;
-  display: block;
-  content: attr(data-error);
-  font-size: 12px;
-  color: #f54f54;
-}
-/* line 68, ../../sass/blocks/_testando-bemdr.scss */
-.ipt-group.-fill {
-  grid-column-end: span 2;
-}
-
-/* line 90, ../../sass/mixins/_ipts.scss */
-.btn {
-  position: relative;
-  vertical-align: middle;
-  display: inline-block;
-  height: 40px;
-  box-sizing: border-box;
-  padding: 0 20px;
-  line-height: 38px;
-  color: #e0e0e0;
-  background: #673ab7;
-  text-decoration: none;
-  border: 0;
-  border-radius: 3px;
-}
-/* line 112, ../../sass/mixins/_ipts.scss */
-.btn:disabled {
-  background-color: #efefef;
-  color: #bfbfbf;
-}
-
-/* line 82, ../../sass/blocks/_testando-bemdr.scss */
-body > p {
-  max-width: 1140px;
-  margin: 10px auto;
-}
-/* line 13, ../../sass/mixins/_first-letter.scss */
-body > p:first-of-type::first-letter {
-  float: left;
-  margin-right: 10px;
-  color: purple;
-  font-size: 350%;
-  line-height: 0.5;
-  font-weight: bold;
-}
-/* line 29, ../../sass/mixins/_first-letter.scss */
-body > p:first-of-type::after {
-  content: '';
-  display: block;
-  clear: both;
+  width: 100vw;
+  height: 100vh;
+  background-image: url("../../assets/img/land.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
 }
