--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -2,5 +2,5 @@
 @import 'mixins/_mquerys';
 @import 'mixins/_text-limiter';
 @import 'mixins/_grid';
-@import 'mixins/_ipts';
+@import 'mixins/_buttons';
 @import 'mixins/_first-letter';
