--- a/sass/_blocks.scss
+++ b/sass/_blocks.scss
@@ -2,4 +2,7 @@
 // Blocks
 //-------------
 
+@import "blocks/_scene";
 @import "blocks/_intro";
+@import "blocks/_truck";
+@import "blocks/_controllers";
