--- a/sass/blocks/_objects.scss
+++ b/sass/blocks/_objects.scss
@@ -2,13 +2,20 @@
 // Objetos de Cena
 //-------------------------
 
-
 .game__woods {
     & {
-        position: absolute;
-        bottom: 16.5vh;
-        width: 12vw;
+        // width: 22vw;
+        // height: auto;
+        // margin-left: 66vw;
+        // transition: 5s left;
+        // margin-top: 68vh;
+        // z-index: 2;
+        width: 23vw;
         height: auto;
+        margin-left: 873px;
+        position: relative;
         transition: 5s left;
+        margin-top: 605px;
+        z-index: 2;
     }
 }
