--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,13 +212,18 @@ th {
 
 /* line 5, ../../sass/blocks/_scene.scss */
 .game {
+  display: none;
   position: relative;
   height: 100vh;
   width: 100vw;
   overflow: hidden;
 }
-
 /* line 12, ../../sass/blocks/_scene.scss */
+.game.-is-active {
+  display: block;
+}
+
+/* line 17, ../../sass/blocks/_scene.scss */
 .game__scene {
   position: absolute;
   top: 0;
@@ -230,47 +235,47 @@ th {
   z-index: -1;
 }
 
-/* line 24, ../../sass/blocks/_scene.scss */
+/* line 29, ../../sass/blocks/_scene.scss */
 .game.--step1 .game__scene {
   left: -500px;
 }
 
-/* line 28, ../../sass/blocks/_scene.scss */
+/* line 33, ../../sass/blocks/_scene.scss */
 .game.--step2 .game__scene {
   left: -1000px;
 }
 
-/* line 32, ../../sass/blocks/_scene.scss */
+/* line 37, ../../sass/blocks/_scene.scss */
 .game.--step3 .game__scene {
   left: -1500px;
 }
 
-/* line 36, ../../sass/blocks/_scene.scss */
+/* line 41, ../../sass/blocks/_scene.scss */
 .game.--step3 .game__scene {
   left: -2000px;
 }
 
-/* line 40, ../../sass/blocks/_scene.scss */
+/* line 45, ../../sass/blocks/_scene.scss */
 .game.--step4 .game__scene {
   left: -2500px;
 }
 
-/* line 44, ../../sass/blocks/_scene.scss */
+/* line 49, ../../sass/blocks/_scene.scss */
 .game.--step5 .game__scene {
   left: -3000px;
 }
 
-/* line 48, ../../sass/blocks/_scene.scss */
+/* line 53, ../../sass/blocks/_scene.scss */
 .game.--step6 .game__scene {
   left: -3500px;
 }
 
-/* line 52, ../../sass/blocks/_scene.scss */
+/* line 57, ../../sass/blocks/_scene.scss */
 .game.--step7 .game__scene {
   left: -4000px;
 }
 
-/* line 56, ../../sass/blocks/_scene.scss */
+/* line 61, ../../sass/blocks/_scene.scss */
 .game.--step8 .game__scene {
   left: -4500px;
 }
