--- a/sass/blocks/_scene.scss
+++ b/sass/blocks/_scene.scss
@@ -3,10 +3,15 @@
 //---------------------
 
 .game {
+    display: none;
     position: relative;
     height: 100vh;
     width: 100vw;
     overflow: hidden;
+    
+    &.-is-active {
+        display: block;
+    }
 }
 
 .game__scene {
