--- a/sass/blocks/_objects.scss
+++ b/sass/blocks/_objects.scss
@@ -4,18 +4,11 @@
 
 .game__woods {
     & {
-        // width: 22vw;
-        // height: auto;
-        // margin-left: 66vw;
-        // transition: 5s left;
-        // margin-top: 68vh;
-        // z-index: 2;
-        width: 23vw;
+        width: 22vw;
         height: auto;
-        margin-left: 873px;
-        position: relative;
+        margin-left: 66vw;
         transition: 5s left;
-        margin-top: 605px;
+        margin-top: 68vh;
         z-index: 2;
     }
 }
