--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -371,18 +371,36 @@ th {
 }
 
 /* line 18, ../../sass/blocks/_truck.scss */
+.truck__wheels {
+  width: 20px;
+  height: 20px;
+  animation: spin 2s linear infinite;
+  position: absolute;
+  top: 474px;
+  left: 123px;
+  z-index: 1;
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+/* line 35, ../../sass/blocks/_truck.scss */
 .game.--start .game__truck {
   left: 8vw;
   z-index: 1;
 }
 
-/* line 25, ../../sass/blocks/_truck.scss */
+/* line 42, ../../sass/blocks/_truck.scss */
 .game.--walking .game__truck {
   left: 38vw;
   z-index: 1;
 }
 
-/* line 32, ../../sass/blocks/_truck.scss */
+/* line 49, ../../sass/blocks/_truck.scss */
 .game.--end .game__truck {
   left: 112vw;
   z-index: 1;
