--- a/sass/blocks/_truck.scss
+++ b/sass/blocks/_truck.scss
@@ -14,6 +14,23 @@
     }
 }
 
+
+.truck__wheels {
+    width: 20px;
+    height: 20px;
+    animation: spin 2s linear infinite;
+    position: absolute;
+    top: 474px;
+    left: 123px;
+    z-index: 1;
+  
+    @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+    }
+}
+
+
 .game.--start .game__truck {
     & {
         left: 8vw;
