--- a/sass/blocks/_truck.scss
+++ b/sass/blocks/_truck.scss
@@ -10,6 +10,7 @@
         z-index: -1;
         width: 12vw;
         height: auto;
+        will-change: left;
         transition: 5s left;
     }
 }
